# jigsaw_puzzle

./: .gitignore  CLAUDE.md  Cargo.toml  README-CN.md  README.md  index.html  jigsaw_puzzle.js
.github/workflows/: ci.yaml  deploy-page.yaml
examples/: generator.rs  split_tile.rs
jigsaw_puzzle_generator/: Cargo.toml  README.md
jigsaw_puzzle_generator/examples/: generator.rs
jigsaw_puzzle_generator/src/: lib.rs
src/: gameplay.rs  lib.rs  main.rs  main_menu.rs  splash.rs  ui.rs
src/generator/: mod.rs
