[package]
name = "jigsaw_puzzle"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "jigsaw_puzzle_generator",
]


[dependencies]
bevy = { version = "0.15.0-rc.2", features = ["wayland"] }
jigsaw_puzzle_generator = { path = "jigsaw_puzzle_generator" }

[dev-dependencies]


