[package]
name = "jigsaw_puzzle"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "jigsaw_puzzle_generator",
]


[dependencies]
bevy = { version = "0.15.0-rc.3", features = ["bevy_sprite_picking_backend", "jpeg"] }
#bevy = { git = "https://github.com/bevyengine/bevy", features = ["bevy_sprite_picking_backend"] }
jigsaw_puzzle_generator = { path = "jigsaw_puzzle_generator" }
rand = "0.8.5"
log = "0.4.22"

[dev-dependencies]


