[package]
name = "jigsaw_puzzle"
version = "0.2.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "jigsaw_puzzle_generator",
]


[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"



[dependencies]
bevy = { version = "0.17.0", features = ["jpeg"] }
#bevy = { git = "https://github.com/bevyengine/bevy", features = ["bevy_sprite_picking_backend"] }
jigsaw_puzzle_generator = { path = "jigsaw_puzzle_generator" }
rand = "0.8.5"
log = "0.4.22"

[dev-dependencies]


